force-app/main/default/objects/KimbleOne__DiscountRate__c/KimbleOne__DiscountRate__c.object-meta.xml
<CustomObject>
    <label>Discount Rate</label>
    <nameField>
        <label>Discount Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discount Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>