force-app/main/default/objects/KimbleOne__DiscountRate__c/fields/KimbleOne__Discount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Discount__c</fullName>
    <label>Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>