force-app/main/default/objects/KimbleOne__DiscountRate__c/fields/KimbleOne__DiscountScheme__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DiscountScheme__c</fullName>
    <label>Discount Scheme</label>
    <referenceTo>KimbleOne__DiscountScheme__c</referenceTo>
    <relationshipLabel>Discount Rates</relationshipLabel>
    <relationshipName>DiscountRates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>