force-app/main/default/objects/KimbleOne__DiscountRate__c/fields/KimbleOne__MeasureLower__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__MeasureLower__c</fullName>
    <label>Measure Lower</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>