force-app/main/default/objects/KimbleOne__DiscountRate__c/fields/KimbleOne__MeasureUpper__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__MeasureUpper__c</fullName>
    <label>Measure Upper</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>